<resources>
    <string name="app_name">KotlinCalculatorApp</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="clear">AC</string>
    <string name="back">⌫</string>
</resources>