<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/almostBlack"
    tools:ignore="HardcodedText"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/workingsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/resultsTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:textColor="@color/red"
            android:onClick="allClearAction"
            android:text="@string/clear"/>
        <Button
            style="@style/buttonNumber"
            android:textColor="@color/red"
            android:onClick="backSpaceAction"
            android:text="@string/back"/>
        <Button
            style="@style/buttonNumber"
            android:text="" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/divide"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/seven"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/eight"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/nine" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/times"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/four"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/five"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/six" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/minus"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/one"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/two"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/three" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/plus"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/dot"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/zero"/>
        <Button
            style="@style/buttonNumber"
            android:layout_weight="2"
            android:background="@color/orange"
            android:textSize="60sp"
            android:onClick="equalsAction"
            android:text="@string/equal" />

    </LinearLayout>



</LinearLayout>